// This file holds the data structures related with the functionality of a shard block V2
syntax = "proto3";

package proto;

option go_package = "block";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "block.proto";

// HeaderWithValidatorStats extends the Header structure with extra fields for validator statistics
message HeaderWithValidatorStats {
  Header  Header = 1;
  bytes   ValidatorStatsRootHash   = 2;
}
